--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 
-<!doctype html><html lang="en" dir="ltr"><head><link rel="apple-touch-icon" href="/icon.png"/><link rel="apple-touch-startup-image" href="/icon.png"/><meta name="apple-mobile-web-app-title" content="SHS Games"/><meta name="apple-mobile-web-app-capable" content="yes"/><meta name="apple-mobile-web-app-status-bar-style" content="black"/><script async src="https://www.googletagmanager.com/gtag/js?id=UA-115457382-2"></script><script>window.dataLayer = window.dataLayer || [];
+<!DOCTYPE html><html lang="en"><head><link rel="apple-touch-icon" href="icon.png"/><link rel="apple-touch-startup-image" href="icon.png"/><meta name="apple-mobile-web-app-title" content="SHS Games"/><meta name="apple-mobile-web-app-capable" content="yes"/><meta name="apple-mobile-web-app-status-bar-style" content="black"/><script async src="https://www.googletagmanager.com/gtag/js?id=UA-115457382-2"></script><script>window.dataLayer = window.dataLayer || [];
 		  	
